# isoquac-rewrite

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  main.py  pyproject.toml
frontend/: Dockerfile  Dockerfile.dev  package-lock.json  package.json  vite.config.ts
frontend/src/lib/components/: Footer.svelte  Sidebar.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/documentation/: +page.svelte
frontend/src/routes/documentation/demo/: +page.svelte
frontend/src/routes/documentation/tos/: +page.svelte
frontend/src/routes/documentation/tutorial/: +page.svelte
frontend/src/routes/doe/: +page.svelte
frontend/src/routes/references/: +page.svelte
frontend/src/routes/tools/: +page.svelte
frontend/src/routes/visualisation/: +page.svelte
frontend/static/: .gitignore
job/: Dockerfile  README.md  main.py  pyproject.toml
nginx/: nginx.conf
worker/: Dockerfile  README.md  main.py  pyproject.toml
