[project]
name = "backend"
version = "0.1.0"
description = "IsoQuaC backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.22",
    "fastapi[standard]>=0.128.0",
    "python-multipart>=0.0.21",
    "redis>=7.1.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.9",
]
